Removed client ID

--- a/Q3.ipynb
+++ b/Q3.ipynb
@@ -614,19 +614,18 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "this cell contains id and secret and hence it's hidden"
+    "this cell contains id and secret and hence it's deprecated"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 215,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# @hidden_cell\n",
-    "CLIENT_ID = 'TGW3BOZJZEJIJWTTI20CFEHBFY3TEY5V5BNCLXM4GINSDZ4Z' # your Foursquare ID\n",
-    "CLIENT_SECRET = 'ENRIBP5MTWTUSPM2AP5UPNJZ0JX4150HDDQXMFPHHA0PTMYP' # your Foursquare Secret\n",
-    "ACCESS_TOKEN = 'MIQ2PVGFQLAIEWPEX3DSVE5PD2NFMLB02JKD5PRKPX2ZFQG1'\n",
+    "CLIENT_ID = 'client_id' # your Foursquare ID\n",
+    "CLIENT_SECRET = 'client_secret' # your Foursquare Secret\n",
+    "ACCESS_TOKEN = 'access_token'\n",
     "VERSION = '20180605' # Foursquare API version"
    ]
   },
